syntax = "proto3";

package proto.test.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/daemonl/pvbug/gen/test/v1/test_pb";

message OneTwo {
  F1 field1 = 1;
  F2 field2 = 2;
}

message TwoOne {
  F2 field2 = 1;
  F1 field1 = 2;
}

message F2 {
  FieldWithIssue field = 1;
}

message F1 {
  string need_this = 1; // This needs a value, leaving it empty validates correctly
  FieldWithIssue field = 2;
}

message FieldWithIssue {
  F1 f1 = 1; // This must be before the name string, but does not need a value
  string name = 2 [(buf.validate.field).string.min_len = 1];
}
